[package]
name = "aoc"
version = "0.1.0"
authors = ["trexert <starver@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphanumeric-sort = "1.4.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
modinverse = "0.1.1"
multimap = "0.8.2"
ndarray = "0.14.0"
num = "0.3.1"
regex = "1"
